--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==1.1.2
 gunicorn>=20.0.0
-Flask-SQLAlchemy==2.4.4
+Flask-SQLAlchemy>=2.4.4
 numpy==1.18.5
-Flask-PyMongo==2.3.0
+Flask-PyMongo>=2.3.0
 Jinja2>=2.10.3
 SQLAlchemy>=1.3.18
