--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-Flask==1.1.2
-gunicorn>=20.0.0
-Flask-SQLAlchemy>=2.4.4
-numpy==1.18.5
-Flask-PyMongo>=2.3.0
-Jinja2>=2.10.3
-SQLAlchemy>=1.3.18
-psycopg2>=2.8.6
+Flask>==1.1.1
+Jinja2>==2.10.3
+SQLAlchemy>==1.3.11
+#gunicorn>==20.0.0
+flask_sqlalchemy>==2.0.0
+pandas>==0.22.0
+psycopg2
+pickleshare==0.7.5
+numpy==1.19.5
+scikit-learn
+seaborn==0.10.0
+requests==2.25.0
