--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 Flask>==1.1.1
 Jinja2>==2.10.3
-SQLAlchemy>==1.3.11
-gunicorn>==20.0.0
-flask_sqlalchemy>==2.0.0
-pandas>==0.22.0
+SQLAlchemy>=1.3.11
+gunicorn>=20.0.0
+flask_sqlalchemy>=2.0.0
 psycopg2
-pickleshare==0.7.5
 numpy==1.19.5
-scikit-learn
 seaborn==0.10.0
 requests==2.25.0
